<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_parent_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_backer_with_logo"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="end"
        android:layout_margin="20dp">

        <!-- <ImageView
             android:id="@+id/imgView_police"
             android:layout_width="35dp"
             android:layout_height="40dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/policeicon_head" />-->
        <TextView
            android:id="@+id/textview_police"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoeuib"
            android:text="@string/police_login"
            android:textColor="@android:color/black"
            android:textSize="17sp" />
    </LinearLayout>

    <!--  <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="60dp"
          android:layout_gravity="end"
          android:layout_margin="20dp">

          <TextView
              android:id="@+id/textview_police"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:fontFamily="@font/segoeuib"
              android:text="@string/police_login"
              android:textColor="@android:color/black"
              android:textSize="17sp" />
      </LinearLayout>-->
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/textView_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="left"
            android:text="@string/please_enter"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_white"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:padding="6dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/password"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_white"
            android:ems="10"
            android:inputType="textPassword"
            android:padding="6dp" />

        <TextView
            android:id="@+id/textview_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/md_edittext_error" />

        <FrameLayout
            android:id="@+id/btnLogIn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@drawable/btn_orange"
            android:onClick="onClick"
            android:padding="8dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/log_in"
                android:textColor="#ffff"
                android:textSize="16sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_grey_rounded"
            android:onClick="onClick"
            android:padding="8dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/or_create_new_account"
                android:textColor="#000000"
                android:textSize="16sp" />
        </FrameLayout>
    </LinearLayout>

</RelativeLayout>
