<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_backer_with_logo"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:gravity="">


    <TextView
        android:id="@+id/textview_account_created"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="120dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/segoeuib"
        android:gravity="left"
        android:text="@string/forgotten_password"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textview_account_created_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_account_created"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/segoeui"
        android:text="@string/please_enter_forgot_password"
        android:textColor="@android:color/black"
        android:textSize="20sp" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_account_created_profile"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="20dp"
        android:focusable="false"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/segoeui"
            android:text="@string/email_address_field"
            android:textColor="@android:color/black"
            android:textSize="@dimen/md_listitem_textsize" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/edit_text_white"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:padding="6dp"
            android:textColor="@android:color/black" />

        <FrameLayout
            android:id="@+id/btn_reset_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_orange"
            android:onClick="onClick"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/reset_password"
                android:textColor="#FFFF"
                android:textSize="16sp" />
        </FrameLayout>

    </LinearLayout>
</RelativeLayout>
